# rstring

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  Makefile  README.md  rstring.c  rstring.h
include/rstring/: rstring.h
src/: rstring.c
test/: .clang-tidy  common.h  t1-simple-usage.c  t2-find.c
